# cymmd

./: MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
src/cymmd/: cymmd.pyx  mmd.py
tests/: test_mmd.py
